# Moveit2-Ros1-Control-AUBO

./: README.md
action_bridge_ws/src/action_bridge/: README.md  package.xml
action_bridge_ws/src/action_bridge/src/: action_bridge_fibonacci_1_2.cpp  action_bridge_fibonacci_2_1.cpp  action_bridge_follow_joint_trajectory_2_1.cpp
aubo_ros1_control_ws/: Dockerfile  docker_guide.txt
aubo_ros1_control_ws/src/aubo_robot/aubo_driver/: CMakeLists.txt
aubo_ros1_control_ws/src/aubo_robot/aubo_i5_moveit_config/config/: aubo_i5.srdf
aubo_ros1_control_ws/src/aubo_robot/aubo_i5_moveit_config/launch/: moveit_planning_execution.launch
aubo_ros2_moveit2_ws/src/aubo_description/: CMakeLists.txt  package.xml
aubo_ros2_moveit2_ws/src/aubo_description/urdf/: aubo_i10.urdf
aubo_ros2_moveit2_ws/src/aubo_i5_moveit_config/: CMakeLists.txt  package.xml
aubo_ros2_moveit2_ws/src/aubo_i5_moveit_config/config/: aubo_i5.srdf  auboi5_controllers.yaml  controllers.yaml  kinematics.yaml  sensor.yaml  start_positions.yaml
aubo_ros2_moveit2_ws/src/aubo_i5_moveit_config/launch/: moveit.rviz
aubo_ros2_moveit2_ws/src/run_move_group/: CMakeLists.txt
aubo_ros2_moveit2_ws/src/run_move_group/launch/: auboi5_moveit.launch.py  run_move_group_interface.launch.py
aubo_ros2_moveit2_ws/src/run_move_group/src/: run_move_group.cpp
